--- a/prosperityWebApp/prosperity/static/sleep.css
+++ b/prosperityWebApp/prosperity/static/sleep.css
@@ -70,7 +70,7 @@
 
 #bioage_lower {
   display: grid;
-  grid-template-columns: auto auto;
+  grid-template-columns: auto auto auto;
   position: relative;
   height: 100vh;
 }
@@ -380,19 +380,19 @@
 }
 
 #range1 {
-    /* border: 2px solid rgba(10, 10, 10, 10%); */
-    width: 1.5vh;
-    background: rgb(10,10,10,14%);
-    height: 12vh;
-    position: relative;
-    top: -6vh;
-    left: 0vw;
-    border-radius: 18px;
-    /* margin-top: 7px; */
-    margin-left: -6px;
+  /* border: 2px solid rgba(10, 10, 10, 10%); */
+  width: 1.5vh;
+  background: rgb(10, 10, 10, 14%);
+  height: 12vh;
+  position: relative;
+  top: -6vh;
+  left: 0vw;
+  border-radius: 18px;
+  /* margin-top: 7px; */
+  margin-left: -6px;
 }
 
-#range2{
+#range2 {
   border: 1px solid #e0e0e0;
   width: 0vw;
   height: 9vh;
@@ -400,7 +400,7 @@
   top: 5vh;
 }
 
-#range3{
+#range3 {
   border: 2px solid #8381F7;
   width: 0.5vh;
   background: #8381F7;
@@ -474,7 +474,6 @@
 #six_upper div {
   width: 49.68px;
   height: 23.85px;
-
   background: #8381F7;
   border-radius: 4.9678px;
 }
@@ -494,33 +493,30 @@
 }
 
 #six_lower {
-  width: 267px;
-  height: 21px;
+  width: 8vw;
+  height: 3vh;
   font-family: 'Poppins';
   font-style: normal;
   font-weight: 600;
-  font-size: 17.8959px;
+  position: relative;
+  font-size: 2vh;
   line-height: 22px;
   margin-top: 38px;
   color: #5B6CAC;
 }
 
 #seven {
-  display: grid;
-  grid-template-columns: auto auto auto;
   position: absolute;
-  top: 81vh;
-  width: 32vw;
-}
-
-#seven .grid-item.grid-container {
-  display: grid;
-  grid-template-columns: auto auto;
-  width: 158.05px;
-  height: 144.11px;
+  width: 17vw;
+  height: 15vh;
   background: #FFFFFF;
   box-shadow: 0px 4.96283px 19.8513px rgb(44 88 255 / 20%);
   border-radius: 14.8885px;
+}
+
+#seven_middle{
+  display: grid;
+  grid-template-columns: auto auto;
 }
 
 #seven_upper_para {
