--- a/prosperityWebApp/prosperity/templates/home/index.html
+++ b/prosperityWebApp/prosperity/templates/home/index.html
@@ -23,7 +23,7 @@
     
       <div class="row">
         <div class="col" >
-          {% load static %} <img id="img" style="width:423px" class="r1" src="{% static "media/Component21.jpg" %}" alt="home" />
+          {% load static %} <img id="img" class="r1" src="{% static "media/Component21.jpg" %}" alt="home" />
           {% comment %} <img class="r1" src="https://m-cdn.phonearena.com/images/phones/73688-350/Apple-iPhone-XS-Max.jpg" alt=""> {% endcomment %}
         </div>
         <div class="col">
@@ -41,7 +41,7 @@
               <p class="tnc2">Terms & conditions & Privacy policy</p>
             </div>
             <p class="app-button">Get the app</p>
-            <div style="margin-left: 100px; margin-right:395px" class="row">
+            <div style="margin-left: 100px; margin-right: 395px; position: relative; top: 4vh; left: -5vw;" class="row">
               <div id="ps1" class="col-sm">
                 <img class="playstore1" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3c/Download_on_the_App_Store_Badge.svg/2560px-Download_on_the_App_Store_Badge.svg.png" alt="">
               </div>
