--- a/prosperityWebApp/prosperity/templates/home/genderDob.html
+++ b/prosperityWebApp/prosperity/templates/home/genderDob.html
@@ -54,8 +54,8 @@
               </form>
               
 
-              <div id="right_div_seven">
-                    <a href="">Continue</a>
+              <div style="left: 2.3vw;" id="right_div_seven">
+                    <a href="/heightWeight">Continue</a>
               </div> 
             </div>
         </div>
