--- a/prosperityWebApp/prosperity/templates/home/otp.html
+++ b/prosperityWebApp/prosperity/templates/home/otp.html
@@ -28,7 +28,8 @@
           {% comment %} <img class="r1" src="https://m-cdn.phonearena.com/images/phones/73688-350/Apple-iPhone-XS-Max.jpg" alt=""> {% endcomment %}
         </div>
         <div class="col">
-            <div class="right-div">
+            <div style="left: 5vw;
+            top: 3vh;" class="right-div">
               <p class="rd1">Prosperous your life with</p>
               <p class="rd2">Prosperity</p>
               <p class="rd3">Verify Mobile No</p>
