--- a/prosperityWebApp/prosperity/templates/home/yourself.html
+++ b/prosperityWebApp/prosperity/templates/home/yourself.html
@@ -48,7 +48,7 @@
               <p class="rd6">Hey,</p>
               <p class="rd7">What's Your Name?</p>
               <p class="rd8">Ex. Shiv</p>
-              <button style="margin-left: 52px" class="login"><p class="para">Continue</p></button>
+              <button style="margin-left: 52px" class="login"><a href="/genderDob"><p class="para">Continue</p></a></button>
             
             </div>
             
