--- a/prosperityWebApp/prosperity/static/sleep.css
+++ b/prosperityWebApp/prosperity/static/sleep.css
@@ -298,7 +298,7 @@
   margin-left: 51px;
 }
 
-#four hr {
+#sleep_hr {
   width: 19vw;
   height: 0vh;
   border: -0.006px solid rgba(18, 62, 230, 0.57);
