--- a/prosperityWebApp/prosperity/templates/home/heightWeight.html
+++ b/prosperityWebApp/prosperity/templates/home/heightWeight.html
@@ -18,11 +18,13 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>  
+    
+    
 
   </head>
   <body style="background:#F6F9FF" >
     <div class="top-div">
-      <p class="one" >We Guide you for your Better <b class="two">Health</b></p>
+      <p class="one" >We Guide you for your Better <b id="text" class="two">Health</b></p>
     </div>
     
       <div class="row">
@@ -40,10 +42,10 @@
               <p id="right_div_second">This information lets us know you better for your growth </p>
               <p id="right_div_third">What is your Height ?</p>
               <form action="">
-                <div id="feet" >'</div>
+                {% comment %} <div id="feet" >'</div>
                 <div id="inches">"</div>
                 <output id="rangevalue">5.1</output>
-                <input type="range" min="4" max="7" step="0.10" id="customRange2"  oninput="rangevalue.value=value"/>
+                <input type="range" min="4" max="7" step="0.10" id="customRange2"  oninput="rangevalue.value=value"/> {% endcomment %}
 
                 <img id="weight_scale"  src="{% static "media/weightScale.png" %}" alt="">
                 
@@ -52,8 +54,8 @@
               </form>
               
 
-              <div id="right_div_seven">
-                    <a href="">Continue</a>
+              <div style="left: 2.3vw;" id="right_div_seven">
+                    <a href="/profileDetails">Continue</a>
               </div> 
             </div>
         </div>
@@ -76,6 +78,16 @@
         rangeInputs.forEach(input => {
           input.addEventListener('input', handleInputChange)
         })
+
+        function change(i) {  
+          var doc = document.getElementById("text");  
+          var color =[ "black", "blue", "brown", "green"];  
+          for(i=0; i<color.length; i++){  
+               doc.style.color = color[i];  
+           }
+        }  
+       setInterval(function changebackground(){change(0)},1000);
+        
    
       </script>
 
