--- a/prosperityWebApp/prosperity/templates/home/index.html
+++ b/prosperityWebApp/prosperity/templates/home/index.html
@@ -27,7 +27,7 @@
           {% comment %} <img class="r1" src="https://m-cdn.phonearena.com/images/phones/73688-350/Apple-iPhone-XS-Max.jpg" alt=""> {% endcomment %}
         </div>
         <div class="col">
-            <div class="right-div">
+            <div style="left: 0vw; top: 5vh;" class="right-div">
               <p class="rd1">Prosperous your life with</p>
               <p class="rd2">Prosperity</p>
               <p class="rd3">Login/Create account</p>
