buy policy 2nd page on going

--- a/prosperityWebApp/prosperity/templates/buyPolicy/two.html
+++ b/prosperityWebApp/prosperity/templates/buyPolicy/two.html
@@ -38,5 +38,61 @@
         
         <hr id="two_left_hr" >
     </div>
+
+    <div id="two_right">
+        <p id="two_right_top_para">Choose your Savings Plan</p>
+
+        <div id="two_right_div1">
+            <p id="two_right_div1_1" >Pay 12 Years Only</p>
+            <p id="two_right_div1_1_benefits">Benefits</p>
+            <div id="two_right_div1_2">
+                <div id="two_right_div1_2_inner1">
+                    <i class="bi-check"></i> 
+                    <p>Get 15x Annual Premium at Maturity - ₹ 16.02 Lakhs</p>
+                </div>
+                <div id="two_right_div1_2_inner2" >
+                    <i class="bi-check"></i> 
+                    <p>An annual income of ₹ 1,04,750/- from 15th - 40th years ( 25 years: Pay-out term)   </p>
+                </div>
+                <div id="two_right_div1_2_inner3">
+                    <i class="bi-check"></i> 
+                    <p>Get 10x of annual premium as dealth benefit in Premium payement term Get 15x of annual premium as dealth benefit in Pay-Out term</p>
+                </div>
+            </div>
+
+            <div id="two_right_div1_3">
+                <div id="two_right_div1_3rupee"><p><img src="{% static "media/rupee.png" %}" alt="">1,00,000/-</p></div>
+                <p id="two_right_div1_3gst">Including GST</p>
+                <button id="two_right_div1_3button">Select</button>
+            </div>
+        </div>
+
+        <hr id="two_right_hr">
+
+        <div id="two_right_div1" style="position: relative; top: 33vh">
+            <p id="two_right_div1_1" >Pay 7 Years Only</p>
+            <p id="two_right_div1_1_benefits">Benefits</p>
+            <div id="two_right_div1_2">
+                <div id="two_right_div1_2_inner1">
+                    <i class="bi-check"></i> 
+                    <p>Get 10x Annual Premium at Maturity - ₹ 10.02 Lakhs</p>
+                </div>
+                <div id="two_right_div1_2_inner2" >
+                    <i class="bi-check"></i> 
+                    <p>An annual income of ₹ 54,750/- from 10th - 40th years ( 30 years: Pay-out term)   </p>
+                </div>
+                <div id="two_right_div1_2_inner3">
+                    <i class="bi-check"></i> 
+                    <p>Get 10x of annual premium as dealth benefit.</p>
+                </div>
+            </div>
+
+            <div id="two_right_div1_3" style="top: 35vh;">
+                <div id="two_right_div1_3rupee"><p><img src="{% static "media/rupee.png" %}" alt="">1,00,000/-</p></div>
+                <p id="two_right_div1_3gst">Including GST</p>
+                <button id="two_right_div1_3button">Select</button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
