--- a/prosperityWebApp/prosperity/static/bpTwo.css
+++ b/prosperityWebApp/prosperity/static/bpTwo.css
@@ -97,3 +97,198 @@
     opacity: 0.1;
     border: 1px solid #5B6CAC;
 }
+
+
+#two_right{
+    position: absolute;
+    width: 54vw;
+    height: 77vh;
+    left: 34vw;
+    top: 20vh;
+    background: #FFFFFF;
+    box-shadow: 0px 4px 20px rgb(44 88 255 / 10%);
+    border-radius: 10px;
+}
+#two_right_top_para{
+    position: absolute;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 500;
+    left: 3vw;
+    top: 5vh;
+    font-size: 32px;
+    line-height: 48px;
+    text-transform: capitalize;
+    color: #5B6CAC;
+}
+
+#two_right_div1{
+
+}
+
+#two_right_div1_1{
+    position: absolute;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 21px;
+    line-height: 30px;
+    top: 15vh;
+    left: 5vw;
+    color: #5B6CAC;
+}
+
+#two_right_div1_1_benefits{
+    position: absolute;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    left: 45vw;
+    top: 16vh;
+    line-height: 21px;
+    color: #8381F7;
+}
+
+#two_right_div1_2_inner1{
+    position: absolute;
+    top: 21vh;
+    left: 5vw;
+}
+
+#two_right_div1_2_inner1 i{
+    position: absolute;
+    font-size: 32px;
+    top: -1vh;
+    left: -0.5vw;
+    color: #16E15B;
+}
+
+#two_right_div1_2_inner1 p{
+    top: 0.5vh;
+    position: absolute;
+    font-family: 'Poppins';
+    font-style: normal;
+    left: 1.5vw;
+    font-weight: 400;
+    font-size: 15px;
+    width: 32vw;
+    line-height: 18px;
+    color: #5B6CAC;
+    opacity: 0.8;
+}
+
+#two_right_div1_2_inner2{
+    position: absolute;
+    top: 24.5vh;
+    left: 5vw;
+}
+
+#two_right_div1_2_inner3{
+    position: absolute;
+    top: 28vh;
+    left: 5vw;
+}
+
+#two_right_div1_2_inner2 i{
+    position: absolute;
+    font-size: 32px;
+    top: -1vh;
+    left: -0.5vw;
+    color: #16E15B;
+}
+
+#two_right_div1_2_inner2 p{
+    top: 0.5vh;
+    position: absolute;
+    font-family: 'Poppins';
+    font-style: normal;
+    left: 1.5vw;
+    font-weight: 400;
+    font-size: 15px;
+    width: 39vw;
+    line-height: 18px;
+    color: #5B6CAC;
+    opacity: 0.8;
+}
+#two_right_div1_2_inner3 i{
+    position: absolute;
+    font-size: 32px;
+    top: -1vh;
+    left: -0.5vw;
+    color: #16E15B;
+}
+
+#two_right_div1_2_inner3 p{
+    top: 0.5vh;
+    position: absolute;
+    font-family: 'Poppins';
+    font-style: normal;
+    left: 1.5vw;
+    font-weight: 400;
+    font-size: 16px;
+    width: 32vw;
+    line-height: 27px;
+    color: #5B6CAC;
+    opacity: 0.8;
+}
+
+#two_right_div1_3{
+    left: 5vw;
+    position: absolute;
+    top: 38vh;
+}
+
+#two_right_div1_3rupee{
+    position: absolute;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 23px;
+    line-height: 30px;
+    width: 10vw;
+    color: #5B6CAC; 
+}
+
+#two_right_div1_3rupee p img{
+    height: 1.8vh;
+    margin-right: 5px;
+}
+
+#two_right_div1_3gst{
+    width: 5vw;
+    position: absolute;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 12px;
+    top: 1vh;
+    line-height: 18px;
+    left: 7vw;
+    color: #5B6CAC;
+}
+
+#two_right_div1_3button{
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    padding: 10px 30px;
+    gap: 10px;
+    position: absolute;
+    background: #8381F7;
+    left: 38vw;
+    color: #ffff;
+    border-radius: 8px;
+    top: -1vh;
+    border: 0px;
+}
+
+#two_right_hr{
+    position: absolute;
+    width: 44vw;
+    height: 0px;
+    left: 9vh;
+    top: 43vh;
+    opacity: 0.1;
+    border: 1px solid #5B6CAC;
+}
